# Mandala-Weaver-VCS

./: .gitignore  README.md  README_ES.md  Roadmap.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/collaboration/: mod.rs
src-tauri/src/geometry/: collision.rs  mod.rs  polar_space.rs  ring.rs  transform.rs  vector.rs
src-tauri/src/interface/: cli_api.rs  cli_commands.rs  collaboration_api.rs  mod.rs  projection_api.rs  synarchy_api.rs  template_api.rs
src-tauri/src/language/: mod.rs
src-tauri/src/ontology/: bindu.rs  constellation.rs  mod.rs  monad.rs  semantic_hash.rs
src-tauri/src/persistence/: mod.rs  schemas.rs  search.rs  surreal_bridge.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/synarchy/: mod.rs  registry.rs  sync.rs
src-tauri/src/template/: adapter.rs  engine.rs  mod.rs
src-tauri/src/weaver/: ast_extractor.rs  auto_imports.rs  contract.rs  file_writer.rs  mod.rs  resolver.rs  semantic_diff.rs  source_compiler.rs  threader.rs  watcher.rs
src/components/mandala/: MandalaCanvas.tsx  TooltipNode.tsx
src/components/panels/: DistillPanel.tsx  MonadInspector.tsx  RingsPanel.tsx  SidebarHistory.tsx  SidebarNav.tsx  TerminalPanel.tsx  ThemeSelector.tsx  VectorsPanel.tsx
src/components/synarchy/: AddProjectDialog.tsx  ProjectCard.tsx  ProjectList.tsx
src/layouts/: AppLayout.astro
src/lib/d3/: animations.ts  interactions.ts  renderer.ts  zoom.ts
src/lib/state/: workspaceStore.ts
src/lib/tauri/: commands.ts  events.ts  synarchy_api.ts
src/pages/: explorer.astro  index.astro
src/styles/: global.css  synarchy.css
src/types/: geometry.ts  ontology.ts  synarchy.ts
templates/: core-only.yaml  minimal.yaml
(+5 files in other folders)
