[package]
name = "mandala-weaver"
version = "0.1.0"
description = "VCS Espacial Semantico y Radial"
authors = ["Plantacerium"]
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1.40", features = ["full"] }
tauri-plugin-shell = { version = "2.0.0-rc.4", features = [] }

nalgebra = "0.33"

ast-grep-core = "0.42.0"
ast-grep-language = { version = "0.42.0", features = ["builtin-parser"] }

surrealdb = { version = "3.0.5", features = ["kv-mem"] }

blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
