[package]
name = "mandala-weaver"
version = "0.1.0"
description = "VCS Espacial y Radial"
authors = ["Tu Nombre"]
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1.40", features = ["full"] }
tauri-plugin-shell = { version = "2.0.0-rc.4", features = [] }

nalgebra = "0.33"

ast-grep-core = "0.42.0"
ast-grep-language = { version = "0.42.0", features = ["builtin-parser"] }

surrealdb = { version = "3.0.5", features = ["kv-mem"] }

blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "1.0"
